# This file is a shell script fragment that supplies the information
# necessary to tailor a template configure script into the configure
# script appropriate for this directory.  For more information, check
# any existing configure script.

configdirs="m4 autoconf mmalloc libiberty texinfo flex byacc bison opcodes bfd binutils gcc readline glob ld gas gdb emacs ispell make grep diff rcs cvs patch send_pr libg++ newlib gprof gdbtest libm tgas etc tcl expect tk deja-gnu z8ksim sed fileutils shellutils textutils time wdiff find"
srctrigger=move-if-change
srcname="gnu development package"

# per-host:

case "${host}" in
  m68k-apollo-sysv*)      host_makefile_frag=config/mh-apollo68 ;;
  m68k-apollo-bsd*)       host_makefile_frag=config/mh-a68bsd ;;
  m88k-motorola-m88kbcs)  host_makefile_frag=config/mh-delta88;;
  m88k-dg-dgux*)	  host_makefile_frag=config/mh-dgux ;;
  mips-dec-ultrix*)       host_makefile_frag=config/mh-decstation ;;
  mips-sgi-irix4)         host_makefile_frag=config/mh-irix4 ;;
  mips-sgi-irix3)         host_makefile_frag=config/mh-sysv ;;
  i[34]86-ncr-sysv4*)     host_makefile_frag=config/mh-ncr3000 ;;
  i[34]86-*-sco*)         host_makefile_frag=config/mh-sco ;;
  i[34]86-*-linux)        host_makefile_frag=config/mh-linux ;;
  i[34]86-*-solaris2*)    host_makefile_frag=config/mh-sysv4 ;;
  *-ibm-aix*)             host_makefile_frag=config/mh-aix ;;
  *-sun-solaris*)         host_makefile_frag=config/mh-solaris ;;
  *-sun-*)		  host_makefile_frag=config/mh-sun ;;
  *-hp-hpux)              host_makefile_frag=config/mh-hpux ;;
  *-*sysv4*)              host_makefile_frag=config/mh-sysv4 ;;
  *-*sysv*)               host_makefile_frag=config/mh-sysv ;;
esac

# per-target:

bfd_target=

case "${target}" in
  a29k-amd-ebmon) bfd_target="ebmon29k"  ;;
  a29k-amd-udi)   bfd_target="udi29k" ;;
  a29k-amd-*)     echo "bad target_os for amd" 1>&2
		  exit 1
		  ;;
esac


# remove various programs from consideration.  some of these are not
# reasonable to build for a native compilation (eg newlib).  some of these
# aren't built for each cross compiler toolchain (eg emacs).

if [ x"${host}" = x"${target}" ] ; then
	# remove from native toolchains
	configdirs=`echo ${configdirs} | sed -e 's/newlib//'`
else
	# remove from cross compilers in general
	configdirs=`echo ${configdirs} | sed -e 's/emacs//;s/ispell//;s/rcs//;s/cvs//'`
fi	

# remove more programs from consideration, based on the host or 
# target this usually means that a port of the program doesn't
# exist yet.

#case "${host}" in
#  hppa*-*-*)
#    configdirs=`echo ${configdirs} | sed -e 's/emacs//'`
#    ;;
#esac

case "${target}" in
  mips-*-*)
    configdirs=`echo ${configdirs} | sed -e 's/ld//;s/binutils//;s/gas//'`
    ;;
  rs6000-*-*)
    configdirs=`echo ${configdirs} | sed -e 's/ld//;s/binutils//;s/gas//'`
    ;;
  hppa*-*-*)
    configdirs=`echo ${configdirs} | sed -e 's/ld//;s/binutils//;s/gas//;s/bfd//;s/gdb//'`
    ;;
  *-*-solaris2)
    configdirs=`echo ${configdirs} | sed -e 's/ld//;s/binutils//;s/gas//;s/emacs//'`
    ;;
esac


target_makefile_frag=config/mt-${bfd_target}

#
# Local Variables:
# fill-column: 131
# End:
#

